--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -15,6 +15,7 @@
   justify-content: center;
   /* align-items: center; */
   padding: 2rem 4rem;
+  /* background-color: #f5f5f5; */
 }
 .profileCard .leftProfile p, h2{
   line-height: 2.1rem;
@@ -22,13 +23,17 @@
 .profileCard .leftProfile p{
   line-height: 2.1rem;
   font-size: 0.95rem;
-  color: #2351DC;
+  color: #198754;
+  /* color: #F3721B; */
+  /* color: #2351DC; */
 }
 .profileCard .rightProfile{
   width: 50%;
   height: 100%;
   /* border: 2px solid blue; */
-  background-color:#D3DCF8;
+  background-color: #07102C;
+  /* background-color: #f3b184; */
+  /* background-color:#D3DCF8; */
 }
 .profileImage{
   display: flex;
@@ -68,7 +73,7 @@
   .profileCard .rightProfile{
     width: 100%;
     height: 70vh;
-    padding: 0.7rem 2rem;
+    padding: 0.7rem 2rem 2rem 2rem;
   }
   .profileImage{
     display: flex;
@@ -98,7 +103,9 @@
   .profileCard .leftProfile p{
     line-height: 0.7rem;
     font-size: 0.95rem;
-    color: #2351DC;
+    color: #198754;
+    /* color: #F3721B; */
+    /* color: #2351DC; */
   }
   .navbox{
     display: none;
