--- a/src/components/testimonial.css
+++ b/src/components/testimonial.css
@@ -1,7 +1,8 @@
 .testimonial{
-  background-color: #f5f5f5;
+  background-color: #F6F8FE;
+  /* background-color: #f5f5f5; */
   padding: 0 3rem;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,7 +16,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #1F49C6;
+  background-color: #198754;
   color: white;
   font-size: 1rem;
   height: 100%;
@@ -39,12 +40,13 @@
   padding: 1.2rem;
 }
 .subright img{
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
 }
 .subright .img{
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
 }
 @media screen and (max-width: 900px) {
