--- a/src/components/testimonial.css
+++ b/src/components/testimonial.css
@@ -2,12 +2,10 @@
   background-color: #F6F8FE;
   /* background-color: #f5f5f5; */
   padding: 0 3rem;
-  /* margin-bottom: 20px; */
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 85vh;
-  /* border:2px solid green; */
+  height: 80vh;
 }
 .leftTestimonial{
   width: 40%;
@@ -43,16 +41,20 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  border: 2px solid red;
 }
 .subright .img{
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  border: 2px solid red;
 }
+
 @media screen and (max-width: 900px) {
   .testimonial{
     flex-direction: column;
     padding: 0;
+    height: 800px;
   }
   .leftTestimonial{
     width: 100%;
@@ -64,5 +66,11 @@
   }
   .rightTestimonial .subright{
     padding: 0.7rem;
+  }
+  .testy{
+    border: 2px solid black;
+    height: 100%;
+    width: 50%;
+    padding: 2rem 0;
   }
 }
