--- a/src/components/testimonial.css
+++ b/src/components/testimonial.css
@@ -41,13 +41,13 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 .subright .img{
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 @media screen and (max-width: 900px) {
@@ -68,7 +68,7 @@
     padding: 0.7rem;
   }
   .testy{
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 100%;
     width: 50%;
     padding: 2rem 0;
