--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -88,7 +88,7 @@
     /* border: 2px solid blue; */
   }
   .soso{
-    padding: 3rem 0.1rem;
+    padding: 3rem 0.1rem 0.1rem 0.1rem;
   }
   .navbox{
     display: none;
