--- a/src/components/testimonial.css
+++ b/src/components/testimonial.css
@@ -49,6 +49,10 @@
   border-radius: 50%;
   /* border: 2px solid red; */
 }
+.testy{
+  /* margin-left: 5px; */
+  padding: 1.5rem;
+}
 
 @media screen and (max-width: 900px) {
   .testimonial{
@@ -68,9 +72,11 @@
     padding: 0.7rem;
   }
   .testy{
-    /* border: 2px solid black; */
+    border: 1px solid #198754;
     height: 100%;
     width: 50%;
     padding: 2rem 0;
+    border-radius: 5px;
+    margin-left: 5px;
   }
 }
