--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 3rem 0 5rem 0;
+  padding: 5rem 0 5rem 0;
   /* border: 2px solid red; */
   
 }
@@ -24,11 +24,6 @@
 @media screen and (max-width: 900px) {
   .about-us{
     margin-top: 0.7rem;
-    padding: 1.8rem 0;
-  }
-  .about-us p{
-    font-size: 1.2rem;
-    color: #4D4D4D;
-    line-height: 1.3rem;
+    padding: 1.8rem 2.3rem;
   }
 }
