--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -102,6 +102,7 @@
   .profileCard .leftProfile{
     height: 100vh;
     padding: 2.5rem 2rem;
+    margin-bottom: 2.5rem;
     /* border: 2px solid black; */
   }
   .profileCard .leftProfile p{
