--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -91,7 +91,7 @@
     /* border: 2px solid blue; */
   }
   .soso{
-    padding-top: 4rem;
+    padding: 4.2rem 0.1rem 0.1rem 0.1rem;
   }
   .navbox{
     display: none;
