--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -4,9 +4,9 @@
   align-items: center;
   flex-direction: column;
   background-color: #07102C;
-  height: 30vh;
+  /* height: 30vh; */
   color: #fff;
-  padding: 20px;
+  padding: 50px;
   position: relative;
 }
 .footer .bord{
