--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -3,19 +3,14 @@
   justify-content: center;
   align-items: center;
   height: 85vh;
-  /* border: 2px solid green; */
-  /* position: relative; */
 }
 .profileCard .leftProfile{
   width: 50%;
   height: 100%;
-  /* border: 2px solid red; */
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
   padding: 2rem 4rem;
-  /* background-color: #f5f5f5; */
 }
 .profileCard .leftProfile p, h2{
   line-height: 2.1rem;
@@ -35,10 +30,7 @@
   width: 50%;
   height: 100%;
   border-bottom-left-radius: 3rem;
-  /* border: 2px solid blue; */
   background-color: #07102C;
-  /* background-color: #f3b184; */
-  /* background-color:#D3DCF8; */
 }
 .profileImage{
   display: flex;
@@ -73,7 +65,8 @@
   .profileCard .leftProfile{
     width: 100%;
     height: 70vh;
-    padding: 2rem;
+    /* padding: 2rem; */
+    padding: 2.5rem 2rem;
   }
   .profileCard .leftProfile h2{
     line-height: 2.3rem;
@@ -105,7 +98,6 @@
 @media screen and (max-width: 680px) {
   .profileCard .leftProfile{
     height: 100vh;
-    padding: 2.5rem 2rem;
     /* border: 2px solid black; */
   }
   .profileCard .leftProfile p{
