--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -19,7 +19,7 @@
   color: #07102C;
 }
 .profileCard .leftProfile p{
-  line-height: 2.1rem;
+  line-height: 1rem;
   font-size: 0.95rem;
   color: #198754;
   /* color: #198754; */
@@ -67,6 +67,9 @@
     height: 70vh;
     /* padding: 2rem; */
     padding: 2.5rem 2rem;
+  }
+  .profilePara{
+    padding-top: 2rem;
   }
   .profileCard .leftProfile h2{
     line-height: 2.3rem;
